<?xml version="1.0" encoding="UTF-8"?>
<project xmlns="http://maven.apache.org/POM/4.0.0" xmlns:xsi="http://www.w3.org/2001/XMLSchema-instance" xsi:schemaLocation="http://maven.apache.org/POM/4.0.0 http://maven.apache.org/xsd/maven-4.0.0.xsd">
  <modelVersion>4.0.0</modelVersion>
  <parent>
    <groupId>org.springframework.boot</groupId>
    <artifactId>spring-boot-starter-parent</artifactId>
    <version>3.2.2</version>
    <relativePath/>
    <!-- lookup parent from repository -->
  </parent>
  <groupId>com.activeviam.apps</groupId>
  <artifactId>pivot-spring-boot</artifactId>
  <version>6.0.11</version>
  <description>Template project for Spring Boot</description>

  <properties>
    <java.version>17</java.version>
    <spring-boot.version>3.2.2</spring-boot.version>
    <spring-security.version>6.2.1</spring-security.version>
    <activepivot.version>6.0.11-sb3</activepivot.version>
    <activeui.version>5.1.14</activeui.version>
    <admin-ui.version>5.1.6</admin-ui.version>

    <spotless-maven-plugin.version>2.41.0</spotless-maven-plugin.version>
    <palantir-java-format.version>2.39.0</palantir-java-format.version>
    <springdoc.version>2.3.0</springdoc.version>
  </properties>

  <dependencyManagement>
    <dependencies>
      <!-- Force the usage of the latest Spring Framework version -->
      <dependency>
        <groupId>org.springframework</groupId>
        <artifactId>spring-framework-bom</artifactId>
        <version>${spring-framework.version}</version>
        <type>pom</type>
        <scope>import</scope>
      </dependency>

      <!-- Force the usage of the latest Spring Security version -->
      <dependency>
        <groupId>org.springframework.security</groupId>
        <artifactId>spring-security-bom</artifactId>
        <version>${spring-security.version}</version>
        <type>pom</type>
        <scope>import</scope>
      </dependency>

      <!-- import ActivePivot dependencies -->
      <dependency>
        <groupId>com.activeviam.activepivot</groupId>
        <artifactId>activepivot</artifactId>
        <version>${activepivot.version}</version>
        <type>pom</type>
        <scope>import</scope>
      </dependency>
    </dependencies>
  </dependencyManagement>

  <dependencies>
    <dependency>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-starter-actuator</artifactId>
    </dependency>
    <dependency>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-starter-web</artifactId>
    </dependency>
    <dependency>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-starter-validation</artifactId>
    </dependency>

    <dependency>
      <groupId>org.springframework.security</groupId>
      <artifactId>spring-security-core</artifactId>
    </dependency>
    <dependency>
      <groupId>org.springframework.security</groupId>
      <artifactId>spring-security-config</artifactId>
    </dependency>
    <dependency>
      <groupId>org.springframework.security</groupId>
      <artifactId>spring-security-web</artifactId>
    </dependency>

    <!-- ActivePivot Dependencies -->
    <dependency>
      <groupId>com.activeviam.activepivot</groupId>
      <artifactId>activepivot-server-spring</artifactId>
      <version>${activepivot.version}</version>
    </dependency>
    <dependency>
      <groupId>com.activeviam.apm</groupId>
      <artifactId>apm</artifactId>
      <version>${activepivot.version}</version>
    </dependency>
    <dependency>
      <groupId>io.micrometer</groupId>
      <artifactId>micrometer-tracing-bridge-brave</artifactId>
    </dependency>

    <!-- Dependencies for the content service persistence -->
    <dependency>
      <groupId>org.hibernate.orm</groupId>
      <artifactId>hibernate-core</artifactId>
    </dependency>
    <dependency>
      <groupId>com.h2database</groupId>
      <artifactId>h2</artifactId>
    </dependency>
    <dependency>
      <groupId>org.hibernate.orm</groupId>
      <artifactId>hibernate-hikaricp</artifactId>
    </dependency>

    <!-- Embedded content server UI -->
    <dependency>
      <groupId>com.activeviam.tech</groupId>
      <artifactId>admin-ui</artifactId>
      <version>${admin-ui.version}</version>
    </dependency>

    <!-- Embedded ActiveUI -->
    <dependency>
      <groupId>com.activeviam.activeui</groupId>
      <artifactId>activeui</artifactId>
      <version>${activeui.version}</version>
    </dependency>
    <dependency>
      <groupId>com.activeviam.activeui</groupId>
      <artifactId>activeui-initial-content</artifactId>
      <version>${activeui.version}</version>
    </dependency>

    <!-- Test dependencies -->
    <dependency>
      <groupId>org.springframework.boot</groupId>
      <artifactId>spring-boot-starter-test</artifactId>
      <scope>test</scope>
    </dependency>
    <dependency>
      <groupId>org.springframework.security</groupId>
      <artifactId>spring-security-test</artifactId>
      <scope>test</scope>
    </dependency>
    
    <dependency>
      <groupId>com.activeviam.activepivot</groupId>
      <artifactId>activepivot-copper2-test</artifactId>
      <scope>test</scope>
      <exclusions>
        <exclusion>
          <groupId>junit</groupId>
          <artifactId>junit</artifactId>
        </exclusion>
      </exclusions>
    </dependency>
    <dependency>
      <groupId>com.activeviam.tech</groupId>
      <artifactId>datastore-test</artifactId>
      <scope>test</scope>
      <exclusions>
        <exclusion>
          <groupId>junit</groupId>
          <artifactId>junit</artifactId>
        </exclusion>
      </exclusions>
    </dependency>

    <dependency>
      <groupId>org.springdoc</groupId>
      <artifactId>springdoc-openapi-starter-webmvc-ui</artifactId>
      <version>${springdoc.version}</version>
    </dependency>
  </dependencies>

  <build>
    <plugins>
      <plugin>
        <groupId>com.diffplug.spotless</groupId>
        <artifactId>spotless-maven-plugin</artifactId>
        <version>${spotless-maven-plugin.version}</version>
        <configuration>
          <!-- limit format enforcement to just the files changed by this feature branch -->
          <ratchetFrom>origin/6.0</ratchetFrom>
          <!-- define a language-specific format -->
          <java>
            <palantirJavaFormat>
              <version>${palantir-java-format.version}</version>
            </palantirJavaFormat>

            <importOrder>
              <!-- or a custom ordering -->
              <order>\\#,java,javax,org,com,com.diffplug,</order>
              <!-- or use <file>${project.basedir}/eclipse.importorder</file> -->
              <!-- you can use an empty string for all the imports you didn't specify explicitly, and '\\#` prefix for static imports. -->
            </importOrder>

            <removeUnusedImports/>
            <licenseHeader>
              <file>./.idea/copyright/spotless.license</file>
            </licenseHeader>
          </java>
          <pom>
            <!-- These are the defaults, you can override if you want -->
            <includes>
              <include>**/pom.xml</include>
            </includes>
            <sortPom>
              <!-- has its own section below -->
              <expandEmptyElements>false</expandEmptyElements>
            </sortPom>
          </pom>
          <markdown>
            <includes>
              <!-- You have to set the target manually -->
              <include>**/*.md</include>
            </includes>
            <flexmark/>
            <!-- has its own section below -->
          </markdown>
        </configuration>
        <executions>
          <execution>
            <goals>
              <goal>check</goal>
            </goals>
          </execution>
        </executions>
      </plugin>

      <plugin>
        <groupId>org.apache.maven.plugins</groupId>
        <artifactId>maven-compiler-plugin</artifactId>
        <configuration>
          <source>${java.version}</source>
          <target>${java.version}</target>
          <annotationProcessorPaths>
            <path>
              <groupId>org.projectlombok</groupId>
              <artifactId>lombok</artifactId>
              <version>${lombok.version}</version>
            </path>
            <path>
              <groupId>org.springframework.boot</groupId>
              <artifactId>spring-boot-configuration-processor</artifactId>
              <version>${spring-boot.version}</version>
            </path>
          </annotationProcessorPaths>
        </configuration>
      </plugin>

      <plugin>
        <groupId>org.springframework.boot</groupId>
        <artifactId>spring-boot-maven-plugin</artifactId>
      </plugin>
    </plugins>
  </build>

</project>
